[fix] overflow bookmarks sidebar if necessary

--- a/sass/components/_webapp.scss
+++ b/sass/components/_webapp.scss
@@ -34,10 +34,12 @@ html {
 }
 
 
-.bookmark-filter {
+.bookmark-sidebar {
   position: sticky;
   top: 5em;
   align-self: flex-start;
+  height: calc(100vh - 5em);
+  overflow: auto;
   background: white;
   z-index: 2000;
   @include respond(phone) {
